kanc/src/tests/sample_code/should_fail/single_file/parse/component_kw_in_dot_rhs/super_dot_mod.k
let x = super.mod.Nat.o;
